# mini-face

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  MANIFEST.in  README.md  config.h  example_results.txt  main.cpp  pyproject.toml  setup.py  vcpkg-configuration.json  vcpkg.json
.github/containers/: manylinux_aarch64.Dockerfile  manylinux_x86_64.Dockerfile
.github/macos/: vcpkg.json
.github/manifests/linux_x86_64/: vcpkg.json
.github/manifests/manylinux_aarch64/: vcpkg.json
.github/scripts/: OpenBLASConfig.cmake  build_and_install_dependency.sh
.github/vcpkg_triplets/: linux-x86-64.cmake
.github/workflows/: cd-test.yml  cd.yml  ci.yml  test_release.yml
dev/: .gitignore  test.py
lib/: .gitignore
lib/OpenFace/include/: FaceAnalyserParameters.h  Face_utils.h  ImageManipulationHelpers.h  LandmarkDetectorParameters.h  SVM_static_lin.h  stdafx_fa.h
lib/OpenFace/src/: Face_utils.cpp  LandmarkDetectorFunc.cpp  LandmarkDetectorParameters.cpp  LandmarkDetectorUtils.cpp  SVM_static_lin.cpp  SVR_dynamic_lin_regressors.cpp  SVR_static_lin_regressors.cpp
overlays/openblas/: vcpkg.json
overlays/opencv/: vcpkg.json
scripts/cpp_toolchain_setup/: manylinux.sh  musllinux.sh
src/: actionUnits.cpp  actionUnits.h  bindings.cpp  config.h  extractor.cpp  extractor.h  fileOutput.cpp  fileOutput.h  gaze.cpp  gaze.h  landmarks.cpp  landmarks.h  videoIO.cpp  videoIO.h  visualization.cpp  visualization.h  visualizer.cpp  visualizer.h
src/mini-face/OpenFace/include/: FaceAnalyser.h  SVM_dynamic_lin.h  SVR_dynamic_lin_regressors.h  SVR_static_lin_regressors.h
src/mini-face/OpenFace/src/: FaceAnalyser.cpp  FaceAnalyserParameters.cpp  GazeEstimation.cpp  LandmarkDetectorModel.cpp  SVM_dynamic_lin.cpp
src/mini-face/local/: actionUnits.cpp  actionUnits.h  gaze.cpp  gaze.h  helpers.h  landmarks.cpp  landmarks.h
src/python/: api.cpp
src/python/mini_face/: __init__.py  action_unit.py  gaze.py  mode.py
src/python/mini_face/action_unit/: __init__.py  _action_unit.py
src/python/mini_face/common/: __init__.py
src/python/mini_face/gaze/: __init__.py  _gaze.py
test/: .gitignore  estimate.py  main.py  misc.py  render.py  test.cpp  test.h  test.py
