[project]
name = "mini-face"
version = "0.1.0"
authors = [
    { name = "Igor Swat", email = "iswat@student.agh.edu.pl" },
    { name = "Jan Smółka", email = "jp.smolka@gmail.com" },
]
description = "A minimalist Python wrapper for OpenFace library"
readme = "README.md"
license = { text = "BSD 3-Clause License" }
requires-python = ">=3.12"
keywords = ["OpenFace", "vcpkg", "pybind11", "scikit-build", "cpp"]

dependencies = ["numpy>=1.21"]

[project.urls]
repository = "https://github.com/child-lab-uj/mini-face"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=42",
    "wheel",
    "scikit-build>=0.13",
    "ninja",
    "pybind11",
]

[tool.cibuildwheel]
skip = ["pp*", "*musllinux*", "*win32*"]
manylinux-x86_64-image = "manylinux_x86_64:latest"
manylinux-aarch64-image = "manylinux-aarch64:latest"
build-verbosity = 3

[tool.cibuildwheel.linux]
archs = ['x86_64']

[tool.cibuildwheel.linux.environment]
VCPKG_INSTALLED = "$VCPKG_ROOT/installed/$VCPKG_DEFAULT_TRIPLET"

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "14.0"
